build: downgrade to spring boot 2 and java 11